<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".trips.add.AddTripActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">
        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="#FAFAFA"
            app:fontFamily="@font/roboto_mono"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <ImageView
                android:padding="8dp"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:id="@+id/btn_save"
                android:src="@drawable/ic_check_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".trips.add.AddTripActivity"
        tools:showIn="@layout/activity_add_trip">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_destination_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textview"
            android:drawableEnd="@drawable/ic_search_black_24dp"
            android:padding="16dp"
            android:text="Select your destination"
            app:fontFamily="@font/roboto_mono"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_textview"
            android:drawableEnd="@drawable/ic_date_range_black_24dp"
            android:padding="16dp"
            android:text="Select the dates of your trip"
            app:fontFamily="@font/roboto_mono"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_destination_title" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_description"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_textview"
            android:gravity="top"
            android:hint="Description..."
            android:lines="10"
            android:padding="16dp"
            android:textColor="#747574"
            app:fontFamily="@font/roboto_mono"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_date" />

        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/input_description"
            app:layout_constraintEnd_toEndOf="@+id/input_description"
            app:layout_constraintStart_toStartOf="@+id/input_description"
            app:layout_constraintTop_toTopOf="@+id/input_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>