<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_airline_seat_recline_extra_black_24dp"
        android:layout_width="192dp"
        android:layout_height="192dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_email"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_textview"
        android:gravity="top"
        android:hint="Email"
        android:padding="16dp"
        android:textColor="#747574"
        app:fontFamily="@font/roboto_mono"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_password"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_textview"
        android:gravity="top"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#747574"
        app:fontFamily="@font/roboto_mono"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        app:layout_constraintRight_toLeftOf="@+id/btn_sign_up"
        android:layout_marginRight="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sign In"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_sign_in"
        app:layout_constraintRight_toRightOf="@+id/txt_password"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sign Up"/>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/txt_email"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toTopOf="@+id/txt_email" />
</androidx.constraintlayout.widget.ConstraintLayout>
