<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_check_black_24dp"
        android:id="@+id/menu_save"
        app:showAsAction="always"
        android:title="Save" />
</menu>